# growing-ca

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  training.ipynb
.github/workflows/: build-demo.yml  lint.yml  test.yml  type-check.yml
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/public/models/: emoji_0.onnx  emoji_1.onnx  emoji_2.onnx  emoji_3.onnx  emoji_4.onnx  emoji_5.onnx  emoji_6.onnx  emoji_7.onnx  emoji_8.onnx  emoji_9.onnx
demo/src/: ca.ts  main.ts  style.css
models/: emoji_0.pth  emoji_1.pth  emoji_2.pth  emoji_3.pth  emoji_4.pth  emoji_5.pth  emoji_6.pth  emoji_7.pth  emoji_8.pth  emoji_9.pth
src/growing_ca/: __init__.py  cli.py  convert_onnx.py  main_pygame_dl.py  train.py
src/growing_ca/core/: CAModel.py  displayer.py  image_utils.py  model.py  trainer.py  utils.py  utils_vis.py
tests/: test_cli.py  test_train.py
tests/core/: test_model.py  test_trainer.py  test_utils.py  test_utils_vis.py
