[project]
name = "growing-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bob Merkus", email = "bob.merkus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pygame>=2.6.1",
    "torch>=2.8.0",
]

[project.scripts]
growing-ca = "growing_ca:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
