[project]
name = "growing-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bob Merkus", email = "bob.merkus@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "imageio>=2.37.0",
    "numpy>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pygame>=2.6.1",
]

[project.scripts]
growing-ca = "growing_ca:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
cpu = ["torch"]
cuda = ["torch"]
rocm = ["torch", "pytorch-triton-rocm"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "rocm" }
  ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
  { index = "pytorch-rocm", extra = "rocm" }
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.0"
explicit = true



[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
